# jitter_buffer

./: CMakeLists.txt  Doxyfile  clean_cmake.bat  clean_cmake.sh
common/: exception_dispatcher.h  exception_impl.h  result_code.h
tools/logger/: CMakeLists.txt  logger.h  logger_impl.cc  logger_impl.h
video_coding/: CMakeLists.txt
video_coding/interface/: jitter_buffer.h
video_coding/jitter_buffer/: CMakeLists.txt
video_coding/jitter_buffer/source/: frame_buffer.cc  frame_buffer.h  frame_fragment.cc  frame_fragment.h  jitter_buffer.cc  jitter_buffer_impl.cc  jitter_buffer_impl.h
video_coding/jitter_buffer/tests/: fixture_jitter_buffer.cc  fixture_jitter_buffer.h  main.cc  test_jitter_buffer.cc
video_coding/jitter_buffer/tests/stubs/: stub_decoder.h  stub_renderer.h
video_engine/interface/: decoder.h  renderer.h
